objects/amc__Requirement__c.object
<CustomObject>
    <description>The Requirement Object is a child to the Program Object and captures high-level requirements that need to be fulfilled as part of the Program.</description>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Action this Requirement is assigned to</inlineHelpText>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Benefit__c</fullName>
        <inlineHelpText>Detailed notes on the benefits that will be gained by delivering this Requirement</inlineHelpText>
        <label>Benefit</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Category__c</fullName>
        <inlineHelpText>Identifies the Category this Requirement relates to</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Delivery_Status__c</fullName>
        <inlineHelpText>Identifies the delivery status of the Requirement based on the status of the Action related to this record</inlineHelpText>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Pain_Point_Notes__c</fullName>
        <inlineHelpText>Detailed notes on the current pain point that is driving this Requirement</inlineHelpText>
        <label>Pain Point Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Priority__c</fullName>
        <inlineHelpText>Identifies the Priority of this Requirement</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Program__c</fullName>
        <inlineHelpText>Links to the Program this Requirement relates to</inlineHelpText>
        <label>Program</label>
        <referenceTo>amc__Program__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Project_Sort_Order__c</fullName>
        <description>Identifies the order that the Requirement should appear on the Program Planner</description>
        <inlineHelpText>Identifies the order that the Requirement should appear on the Program Planner</inlineHelpText>
        <label>Project Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Project this Requirement is assigned to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Recommendations__c</fullName>
        <inlineHelpText>Detailed notes on the recommended solution</inlineHelpText>
        <label>Recommendations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Required_By__c</fullName>
        <inlineHelpText>Identifies the date this Requirement needs to be delivered by</inlineHelpText>
        <label>Required By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Requirement_Name__c</fullName>
        <inlineHelpText>Identifies the name of the Requirement</inlineHelpText>
        <label>Requirement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Requirement_Notes__c</fullName>
        <inlineHelpText>Detailed notes on the Requirement</inlineHelpText>
        <label>Requirement Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <inlineHelpText>Identifies the Status this Requirement is currently allocated to</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Priority Backlog</fullName>
                </value>
                <value>
                    <fullName>Assigned to Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Total_Effort__c</fullName>
        <inlineHelpText>Summarises the effort across all related User Stories</inlineHelpText>
        <label>Total Effort</label>
        <summarizedField>amc__User_Story__c.amc__Effort__c</summarizedField>
        <summaryForeignKey>amc__User_Story__c.amc__Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Total_User_Stories__c</fullName>
        <inlineHelpText>Identifies how many User Stories are related to this Requirement</inlineHelpText>
        <label>Total User Stories</label>
        <summaryForeignKey>amc__User_Story__c.amc__Requirement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Requirement_Name__c</columns>
        <columns>amc__Program__c</columns>
        <columns>amc__Project__c</columns>
        <columns>amc__Status__c</columns>
        <columns>amc__Category__c</columns>
        <columns>amc__Priority__c</columns>
        <columns>amc__Required_By__c</columns>
        <columns>amc__Total_User_Stories__c</columns>
        <columns>amc__Total_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REQ:{000000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>